[tool.poetry]
name = "vectorfriends-neo4j"
version = "0.1.0"
description = ""
authors = ["jalakoo <jalakoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
neo4j = "^5.20.0"
functions-framework = "^3.5.0"
basicauth = "^1.0.0"
openai = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
